# ServiceWrapper

./: CMakeLists.txt  README.md
Service/include/: serviceengine.h
Service/include/common/: callback.h  enums.h  event.h  eventemitter.h
Service/include/common/event/: event.h
Service/include/common/std/: unordered_map.h
Service/src/: main.cpp  serviceengine.cpp
ServiceInterface/: CMakeLists.txt  main.cpp
ServiceInterface/common/: enums.h  signal.h
ServiceInterface/lib/: signal.h
include/: ServiceEngine.h
include/Common/: AbstractService.h  LoopEngine.h
include/Common/Event/: CallbackEvent.h  Event.h  EventEmitter.h
include/Common/Logger/: Logger.h
include/SmartPhone/: SmartPhoneService.h
include/SystemSetting/: SystemSettingService.h
include/common/: callback.h  enums.h
include/common/event/: eventemitter.h
src/: ServiceEngine.cpp  main.cpp
src/Common/: AbstractService.cpp
src/Common/Logger/: Logger.cpp
src/SmartPhone/: SmartPhoneService.cpp
src/SystemSetting/: SystemSettingService.cpp
